👽️ Generate api schemas and clients
