# apps/backend/src/api/store/books/route.ts
@@ -1,6 +1,19 @@
 import { MedusaRequest, MedusaResponse } from '@medusajs/framework'
 import { ContainerRegistrationKeys } from '@medusajs/framework/utils'
 import { convertProductToBook } from '../../../library/converters/product'
+import { Route, Get, Query, Response } from 'tsoa'
+import { TBook } from '@ztf-library/types'
+import { TApiPaginatedReponse } from '../../../library/types'
+
+@Route('/books')
+class OpenApiSchema {
+  /**
+   * Get books, paginated using optional limit and offset
+   */
+  @Get('/')
+  @Response<TApiPaginatedReponse<TBook[]>>('200')
+  getBooks(@Query() limit?: number, @Query() offset?: number) {}
+}
 
 export const GET = async (req: MedusaRequest, res: MedusaResponse) => {
   const query = req.scope.resolve(ContainerRegistrationKeys.QUERY)
@@ -33,14 +46,8 @@ export const GET = async (req: MedusaRequest, res: MedusaResponse) => {
       'variants.prices.currency_code',
       'variants.title',
     ],
-    filters: {
-      id: req.query.productId as string,
-      deleted_at: null,
-    },
-    pagination: {
-      skip: offset,
-      take: limit,
-    },
+    filters: { deleted_at: null },
+    pagination: { skip: offset, take: limit },
   })
 
   res.json({
