# openapi/custom.json
@@ -6,7 +6,345 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"Pick_TBook.slug-or-title_": {
+				"properties": {
+					"slug": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"slug",
+					"title"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Pick_TAuthor.name-or-photo_url-or-about-or-slug_": {
+				"properties": {
+					"slug": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"photo_url": {
+						"type": "string"
+					},
+					"about": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"slug",
+					"name",
+					"photo_url",
+					"about"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"TQuote": {
+				"properties": {
+					"author": {
+						"$ref": "#/components/schemas/Pick_TAuthor.name-or-photo_url-or-about-or-slug_"
+					},
+					"book": {
+						"$ref": "#/components/schemas/Pick_TBook.slug-or-title_"
+					},
+					"content": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"author",
+					"book",
+					"content",
+					"id"
+				],
+				"type": "object"
+			},
+			"TApiDataReponse_TQuote-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/TQuote"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"data"
+				],
+				"type": "object"
+			},
+			"TAuthor": {
+				"properties": {
+					"photo_url": {
+						"type": "string"
+					},
+					"about": {
+						"type": "string"
+					},
+					"slug": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"photo_url",
+					"about",
+					"slug",
+					"name",
+					"id"
+				],
+				"type": "object"
+			},
+			"TCategory": {
+				"properties": {
+					"books": {
+						"items": {
+							"$ref": "#/components/schemas/TBook"
+						},
+						"type": "array"
+					},
+					"rank": {
+						"type": "number",
+						"format": "double"
+					},
+					"description": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"slug": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"rank",
+					"description",
+					"title",
+					"slug",
+					"id"
+				],
+				"type": "object"
+			},
+			"TLanguage": {
+				"properties": {
+					"code": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"code",
+					"id"
+				],
+				"type": "object"
+			},
+			"TCurrency": {
+				"type": "string",
+				"enum": [
+					"eur",
+					"usd",
+					"xof"
+				]
+			},
+			"TPrice": {
+				"properties": {
+					"max_quantity": {
+						"type": "number",
+						"format": "double"
+					},
+					"min_quantity": {
+						"type": "number",
+						"format": "double"
+					},
+					"currency": {
+						"$ref": "#/components/schemas/TCurrency"
+					},
+					"amount": {
+						"type": "number",
+						"format": "double"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"currency",
+					"amount",
+					"id"
+				],
+				"type": "object"
+			},
+			"TFormat": {
+				"properties": {
+					"prices": {
+						"items": {
+							"$ref": "#/components/schemas/TPrice"
+						},
+						"type": "array"
+					},
+					"is_available": {
+						"type": "boolean"
+					},
+					"label": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"prices",
+					"is_available",
+					"label"
+				],
+				"type": "object"
+			},
+			"TBook": {
+				"properties": {
+					"preface": {
+						"type": "string"
+					},
+					"image_url": {
+						"type": "string"
+					},
+					"thumbnail": {
+						"type": "string"
+					},
+					"formats": {
+						"items": {
+							"$ref": "#/components/schemas/TFormat"
+						},
+						"type": "array"
+					},
+					"language": {
+						"$ref": "#/components/schemas/TLanguage"
+					},
+					"categories": {
+						"items": {
+							"$ref": "#/components/schemas/TCategory"
+						},
+						"type": "array"
+					},
+					"author": {
+						"$ref": "#/components/schemas/TAuthor"
+					},
+					"publisher": {
+						"type": "string"
+					},
+					"publish_date": {
+						"type": "number",
+						"format": "double"
+					},
+					"pages_count": {
+						"type": "number",
+						"format": "double"
+					},
+					"isbn": {
+						"type": "string"
+					},
+					"ebook_version_url": {
+						"type": "string"
+					},
+					"dimensions": {
+						"type": "string"
+					},
+					"audio_version_url": {
+						"type": "string"
+					},
+					"slug": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"preface",
+					"image_url",
+					"thumbnail",
+					"formats",
+					"language",
+					"categories",
+					"author",
+					"publisher",
+					"publish_date",
+					"pages_count",
+					"isbn",
+					"ebook_version_url",
+					"dimensions",
+					"audio_version_url",
+					"slug",
+					"title",
+					"id"
+				],
+				"type": "object"
+			},
+			"TApiDataReponse_TCategory-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/TCategory"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"data"
+				],
+				"type": "object"
+			},
+			"TApiPaginatedReponse_TBook-Array_": {
+				"properties": {
+					"offset": {
+						"type": "number",
+						"format": "double"
+					},
+					"limit": {
+						"type": "number",
+						"format": "double"
+					},
+					"count": {
+						"type": "number",
+						"format": "double"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/TBook"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"offset",
+					"limit",
+					"count",
+					"data"
+				],
+				"type": "object"
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,20 +356,86 @@
 		"contact": {}
 	},
 	"paths": {
-		"/books": {
+		"/quotes": {
 			"get": {
-				"operationId": "Get",
+				"operationId": "GetQuotes",
 				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TApiDataReponse_TQuote-Array_"
+								}
+							}
+						}
+					},
 					"204": {
 						"description": "No content"
 					}
 				},
+				"description": "Get all the quotes",
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/categories": {
+			"get": {
+				"operationId": "GetCategories",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TApiDataReponse_TCategory-Array_"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Get all the categories",
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "includeProducts",
+						"required": false,
+						"schema": {
+							"type": "boolean"
+						}
+					}
+				]
+			}
+		},
+		"/books": {
+			"get": {
+				"operationId": "GetBooks",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TApiPaginatedReponse_TBook-Array_"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Get books, paginated using optional limit and offset",
 				"security": [],
 				"parameters": [
 					{
 						"in": "query",
 						"name": "limit",
-						"required": true,
+						"required": false,
 						"schema": {
 							"format": "double",
 							"type": "number"
@@ -40,7 +444,57 @@
 					{
 						"in": "query",
 						"name": "offset",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/books/category/{category_id}": {
+			"get": {
+				"operationId": "GetBooksByCategory",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TApiPaginatedReponse_TBook-Array_"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "Get books from a category, paginated using optional limit and offset",
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "category_id",
 						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
 						"schema": {
 							"format": "double",
 							"type": "number"
